...
        }
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("FruitList")
        ){

            items(order, key = { it.fruits.id}) { data ->
                Items(
                    image = data.fruits.image,
                    title = data.fruits.title,
...
